bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: event-ticket-booking
    labels:
        com.docker.compose.project: event-ticket-booking
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: event-ticket-booking
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: event-ticket-booking
                com.docker.compose.service: frontend
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: ticket-frontend
                  image: nginx
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-80
                      containerPort: 80
                  volumeMounts:
                    - name: usr-share-nginx-html
                      mountPath: /usr/share/nginx/html
            volumes:
                - name: usr-share-nginx-html
                  hostPath:
                    path: E:\PROJECTS\event-ticket-booking\frontend
