bridge/base/mongo-deployment.yaml
#! mongo-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo
    namespace: event-ticket-booking
    labels:
        com.docker.compose.project: event-ticket-booking
        com.docker.compose.service: mongo
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: event-ticket-booking
            com.docker.compose.service: mongo
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: event-ticket-booking
                com.docker.compose.service: mongo
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: ticket-mongo
                  image: mongo
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: mongo-27017
                      containerPort: 27017
