bridge/base/prometheus-deployment.yaml
#! prometheus-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: prometheus
    namespace: event-ticket-booking
    labels:
        com.docker.compose.project: event-ticket-booking
        com.docker.compose.service: prometheus
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: event-ticket-booking
            com.docker.compose.service: prometheus
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: event-ticket-booking
                com.docker.compose.service: prometheus
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: ticket-prometheus
                  image: prom/prometheus
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: prometheus-9090
                      containerPort: 9090
                  volumeMounts:
                    - name: etc-prometheus-prometheus-yml
                      mountPath: /etc/prometheus/prometheus.yml
            volumes:
                - name: etc-prometheus-prometheus-yml
                  hostPath:
                    path: E:\PROJECTS\event-ticket-booking\monitoring\prometheus.yml
